---
source: crates/compiler/codegen/tests/codegen_tests.rs
expression: snapshot_content
---
---
source: crates/compiler/codegen/tests/codegen_tests.rs
expression: codegen_output
---
Fixture: immediate_return.cm
============================================================
Source code:
func test_immediate_return() -> felt {
    let x = 10;
    return x;
}

============================================================
Generated CASM:
test_immediate_return:
test_immediate_return:
test_immediate_return_0:
   0: 6 10 _ 0             // Store immediate: [fp + 0] = 10
   1: 4 0 _ -3             // Return value: [fp - 3] = [fp + 0]
   2: 15 _ _ _             // return
